--- a/borderless-imgui-window-main/cheat-menu.vcxproj
+++ b/borderless-imgui-window-main/cheat-menu.vcxproj
@@ -147,6 +147,7 @@
     <ClInclude Include="cheat\gui.h" />
     <ClInclude Include="cheat\hacks.h" />
     <ClInclude Include="cheat\memory.h" />
+    <ClInclude Include="cheat\vector.h" />
     <ClInclude Include="imgui\imconfig.h" />
     <ClInclude Include="imgui\imgui.h" />
     <ClInclude Include="imgui\imgui_impl_dx9.h" />
