--- a/borderless-imgui-window-main/cheat-menu.vcxproj.filters
+++ b/borderless-imgui-window-main/cheat-menu.vcxproj.filters
@@ -51,6 +51,9 @@
     <ClInclude Include="cheat\hacks.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="cheat\vector.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="imgui\imgui.cpp">
